--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^1.8.3",
     "framer-motion": "^12.5.0",
     "json-server": "^0.17.4",
+    "lucide-react": "^0.488.0",
+    "npm": "^11.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
