--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.3",
     "framer-motion": "^12.5.0",
     "json-server": "^0.17.4",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "sweetalert2": "^11.17.2"
   }
